manifests/cozy-friends/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cozy-friends
  labels:
    app.kubernetes.io/name: cozy-friends
    app.kubernetes.io/part-of: chamber-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
