manifests/cozy-friends/service-gameplay.yaml
apiVersion: v1
kind: Service
metadata:
  name: homestead-gameplay
  namespace: cozy-friends
  labels:
    app.kubernetes.io/name: homestead
    app.kubernetes.io/part-of: cozy-friends
    app.kubernetes.io/component: gameplay
  annotations:
    metallb.io/address-pool: minecraft-public
    metallb.io/loadBalancerIPs: 10.0.0.254
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: homestead
    app.kubernetes.io/component: server
  ports:
    - name: minecraft
      protocol: TCP
      port: 25565
      targetPort: minecraft
